# oglTest

./: CMakeLists.txt
10_camera/: CMakeLists.txt  application.cpp  application.hpp  fragment_shader.glsl  image_loader.hpp  shader.cpp  shader.hpp  vertex_shader.glsl
11_light_1/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  light.fs  light.vs  shader.cpp  shader.hpp
11_light_2/: application.cpp  camera.cpp  camera.hpp  light.fs  main.cpp  shader.cpp  shader.hpp
12_material/: CMakeLists.txt  application.cpp  application.hpp  lamp.fs  lamp.vs  light.fs  light.vs  shader.cpp
13_lightmap/: CMakeLists.txt  application.cpp  application.hpp  image_loader.hpp  light.fs  light.vs  shader.hpp
1_triangle/: CMakeLists.txt  main.cpp
2_rectangle/: CMakeLists.txt  main.cpp  vertex_shader.glsl
3_sd_in_out/: CMakeLists.txt  fragment_shader.glsl  main.cpp  vertex_shader.glsl
4_sd_uniform/: CMakeLists.txt  fragment_shader.glsl  main.cpp
5_shader_extract/: CMakeLists.txt  fragment_shader.glsl  main.cpp  shader.cpp  shader.h  vertex_shader.glsl
5_vertex_color_attr/: CMakeLists.txt  fragment_shader.glsl  main.cpp  vertex_shader.glsl
6_texture/: CMakeLists.txt  fragment_shader.glsl  image_loader.h  main.cpp  vertex_shader.glsl
7_transform/: CMakeLists.txt  image_loader.h  main.cpp  shader.cpp  vertex_shader.glsl
